--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# binding temp dirs
+bindings/target
+bindings/Generated
+.DS_Store
